<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".firebase.RegisterActivity"
    style="@style/parent_view_style">

    <EditText
        android:id="@+id/etEmail"
        android:layout_marginTop="100dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/edittextInput"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        style="@style/edittextInput"
        android:autofillHints="password" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:padding="5dp"
        style="?buttonCustomStyle"
        android:text="@string/sign_up"
        android:textColor="#FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <TextView
        android:id="@+id/btnLogin"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:text="@string/are_you_already_a_member"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        style="@style/textview_log_reg" />

</androidx.constraintlayout.widget.ConstraintLayout>